SUBDIRS = libchain src
ACLOCAL_AMFLAGS = -I m4
CLEANFILES = *~
EXTRA_DIST = example.conf support

super-clean: maintainer-clean
	rm -rf Makefile.in aclocal.m4 autom4te.cache/ config.guess config.sub configure libchain/Makefile.in libchain/aclocal.m4 autom4te.cache/ libchain/configure ltmain.sh  m4 src/Makefile.in compile depcomp install-sh missing
